--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,3 +4,8 @@ body {
 	font-size: 100px;
 	transform: translate(10px);
 }
+.img {
+	width: 50px;
+	height: 50px;
+	background: url('../img/img.jpg');
+}
